# pyproject.toml

[build-system]
requires = ["setuptools>=59.0.0", "wheel", "Cython>=0.29.14", "numpy>=1.19.0" ]
build-backend = "setuptools.build_meta"

[project]
name = "cubit"
version = "1.1.2"
description = "A python package for CUDA registration on bittensor. "
readme = "README.md"
authors = [{ name = "Opentensor Foundation", email = "cameron@opentensor.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bittensor", "cuda", "register", "cubit"]
dependencies = [
    "setuptools>=59.0.0", "wheel", "Cython>=0.29.14", "numpy>=1.19.0", "bittensor>=3.0.0"
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = ["black", "pip-tools", "bittensor>=3.0.0", "pycryptodome==3.4.3" ]

[project.urls]
Homepage = "https://github.com/opentensor/cubit"
