# pyproject.toml

[build-system]
requires = ["setuptools>=70.0.0", "wheel", "Cython>=0.29.33", "numpy>=1.21.6" ]
build-backend = "setuptools.build_meta"

[project]
name = "cubit"
version = "1.2.1"
description = "A python package for CUDA registration on bittensor. "
readme = "README.md"
authors = [{ name = "Opentensor Foundation", email = "cameron@opentensor.ai" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["bittensor", "cuda", "register", "cubit"]
dependencies = [
    "setuptools>=70.0.0", "wheel", "Cython>=0.29.33", "numpy>=1.21.6", "torch>=1.13.1,<3.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["ruff", "pip-tools", "bittensor>=9.0.0", "pycryptodome==3.4.3" ]

[project.urls]
Homepage = "https://github.com/opentensor/cubit"
